--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -14,6 +14,7 @@
               </mat-action-row>
         </mat-expansion-panel>
     </mat-accordion>
+    <mat-paginator [length]="totalPosts" [pageSize]="postsPerPage" [pageSizeOptions]="pageSizeOptions" (page)="onChangePage($event)" *ngIf="posts.length > 0"> </mat-paginator>
     <p class="mat-body-1 info-text" *ngIf = "posts.length <= 0"> No post added yet !!!</p>
 
 
