--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,11 +3,15 @@ ul{
     padding: 0;
     margin: 0;
 }
+
 a {
     text-decoration: none;
     color:white
 }
 
+ul{
+    display: flex;
+}
 .spacer {
     flex: 1 1 auto;
 }
