--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,8 +3,17 @@
     <span [matBadge]="val" matBadgeOverlap="false" matBadgeColor="accent"> <a routerLink="/" routerLinkActive="mat-accent" >My Posts</a></span>
     <span class="spacer"></span>
     <ul>
-        <li>
+        <li *ngIf="userIsAuthenticated">
             <a mat-button routerLink="create" routerLinkActive="mat-accent">Add new posts</a>
+        </li>
+        <li *ngIf="!userIsAuthenticated">
+            <a mat-button routerLink="login" routerLinkActive="mat-accent">Login</a>
+        </li>
+        <li *ngIf="!userIsAuthenticated">
+            <a mat-button routerLink="singup" routerLinkActive="mat-accent">Singup</a>
+        </li>
+        <li *ngIf="userIsAuthenticated">
+            <button mat-button  (click)="onLogout()">Logout</button>
         </li>
     </ul>
 </mat-toolbar>
