--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,10 +7,10 @@
             <a mat-button routerLink="create" routerLinkActive="mat-accent">Add new posts</a>
         </li>
         <li *ngIf="!userIsAuthenticated">
-            <a mat-button routerLink="login" routerLinkActive="mat-accent">Login</a>
+            <a mat-button routerLink="/auth/login" routerLinkActive="mat-accent">Login</a>
         </li>
         <li *ngIf="!userIsAuthenticated">
-            <a mat-button routerLink="singup" routerLinkActive="mat-accent">Singup</a>
+            <a mat-button routerLink="/auth/singup" routerLinkActive="mat-accent">Singup</a>
         </li>
         <li *ngIf="userIsAuthenticated">
             <button mat-button  (click)="onLogout()">Logout</button>
